src/pixel.css
/* Fonts (only for latin and latin-ext characters) */
@font-face {
  font-family: 'Ubuntu Mono';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: local('Ubuntu Mono'), local('UbuntuMono-Regular'), url(https://fonts.gstatic.com/s/ubuntumono/v9/KFOjCneDtsqEr0keqCMhbCc0CsTYl4BOQ3o.woff2) format('woff2');
  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
}
@font-face {
  font-family: 'Ubuntu Mono';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: local('Ubuntu Mono'), local('UbuntuMono-Regular'), url(https://fonts.gstatic.com/s/ubuntumono/v9/KFOjCneDtsqEr0keqCMhbCc6CsTYl4BO.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}
@font-face {
  font-family: 'Nunito';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: local('Nunito Regular'), local('Nunito-Regular'), url(https://fonts.gstatic.com/s/nunito/v12/XRXV3I6Li01BKofIO-aBTMnFcQIG.woff2) format('woff2');
  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
}
@font-face {
  font-family: 'Nunito';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: local('Nunito Regular'), local('Nunito-Regular'), url(https://fonts.gstatic.com/s/nunito/v12/XRXV3I6Li01BKofINeaBTMnFcQ.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}
/* Miscellaneous */
@media screen and (prefers-reduced-motion: reduce) { html { scroll-behavior:auto } }
/* Vague stylings */
html {
scroll-behavior:smooth;
text-rendering:geometricPrecision
}

* {
padding:0;
margin:0
}

/* Variables */
:root {
font-size: 16px;
--p-blue:#2a7bde;
--p-blue-hover:#1957a2;
--p-red:#c4181d;
--p-red-hover:#801013;
--p-green:#4BB543;
--p-green-hover:#347d2e;
--p-purple:#7851a9;
--p-purple-hover:#533875;
--p-yellow:#ffd500;
--p-yellow-hover:#b39500;
--p-orange:#ff7b00;
--p-orange-hover:#b35600;
--p-pink:#ff748c;
--p-pink-hover:#ff284d;
--p-dark:#333;
--p-dark-hover:#595959;
--p-white: #fff;
--p-white-hover: #d3d3d3;
--p-grey: #808080;
--p-grey-hover: #000;
--p-black: #000;
--p-black-hover: #808080;
--p-light-grey: #d3d3d3;
--p-light-grey-hover: #808080;

--p-anchor-indent: 100px;
--p-font-landing-title: Nunito, sans-serif;
--p-font-body: Arial,sans-serif;
--p-font-code: "Ubuntu Mono",Consolas,"Courier New",monospace;

--p-h1-size: 4.5rem;
--p-h2-size: 3.5rem;
--p-h3-size: 2rem;
--p-h4-size: 1rem;
--p-h5-size: 1rem;
--p-h6-size: 1rem;
/* Following variables only affect h1-h3 */
--p-pad: 0.5rem;
--p-margin: 0.5rem;
}
@media (prefers-color-scheme: dark) {
  .nav {
  background-color:var(--p-dark);
  border-bottom:none
  }
  .nav>div>.link,.nav>div>div>.link {
  color:var(--p-white)
  }

  .nav>div>.link:hover,.nav>div>div>.link:hover {
  color:var(--p-pink)
  }
}

/* Page components */
body {
font-family: var(--p-font-body);
background-color: var(--p-white)
}

/* Component alterations */
.right {
float:right
}

.left {
float:left
}

.center {
text-align:center
}

.round-sm {
border-radius:5px
}

.round-md {
border-radius:10px
}

.round-xl {
border-radius:25px
}

button.blue:hover {
background-color:var(--p-blue-hover)
}

button.blue:active {
border:3px inset var(--p-blue-hover)
}

button.green:hover {
background-color:var(--p-green-hover)
}

button.green:active {
border:3px inset var(--p-green-hover)
}

button.red:hover {
background-color:var(--p-red-hover)
}

button.red:active {
border:3px inset var(--p-red-hover)
}

button.yellow:hover {
background-color:var(--p-yellow-hover)
}

button.yellow:active {
border:3px inset var(--p-yellow-hover)
}

button.orange:hover {
background-color:var(--p-orange-hover)
}

button.orange:active {
border:3px inset var(--p-orange-hover)
}

button.pink:hover {
background-color:var(--p-pink-hover)
}

button.pink:active {
border:3px inset var(--p-pink-hover)
}

button.purple:hover {
background-color:var(--p-purple-hover)
}

button.purple:active {
border:3px inset var(--p-purple-hover)
}

button.dark:hover {
background-color:var(--p-dark-hover)
}

button.dark:active {
border:3px inset var(--p-dark-hover)
}

button.white:hover {
background-color:var(--p-white-hover)
}

button.white:active {
border:3px inset var(--p-white-hover)
}

button.light-grey:hover {
background-color:var(--p-light-grey-hover)
}

button.light-grey:active {
border:3px inset var(--p-light-grey-hover)
}

button.grey:hover {
background-color:var(--p-grey-hover)
}

button.grey:active {
border:3px inset var(--p-grey-hover)
}

button.black:hover {
background-color:var(--p-black-hover)
}

button.black:active {
border:3px inset var(--p-black-hover)
}

.red {
background-color:var(--p-red)
}

.pink {
background-color:var(--p-pink)
}

.yellow {
background-color:var(--p-yellow)
}

.orange {
background-color:var(--p-orange)
}

.green {
background-color:var(--p-green)
}

.blue {
background-color:var(--p-blue)
}

.purple {
background-color:var(--p-purple)
}

.dark {
background-color:var(--p-dark)
}

.white {
background-color:var(--p-white)
}

.grey {
background-color:var(--p-grey)
}

.black {
background-color:var(--p-black)
}

.light-grey {
  background-color: var(--p-light-grey)
}

.text-red, a.text-red {
color:var(--p-red)
}

.text-pink, a.text-pink {
color:var(--p-pink)
}

.text-yellow, a.text-yellow {
color:var(--p-yellow)
}

.text-orange, a.text-orange {
color:var(--p-orange)
}

.text-green, a.text-green {
color:var(--p-green)
}

.text-blue, a.text-blue {
color:var(--p-blue)
}

.text-purple, a.text-purple {
color:var(--p-purple)
}

.text-dark, a.text-dark {
color:var(--p-dark)
}

.text-white, a.text-white {
color:var(--p-white)
}

.text-grey, a.text-grey {
color:var(--p-grey)
}
/* ... */

